Fixed z-index issue in Edge

--- a/wcfsetup/install/files/style/layout/pageHeader.scss
+++ b/wcfsetup/install/files/style/layout/pageHeader.scss
@@ -291,6 +291,9 @@
 
 .searchBarOpen .pageHeaderSearch {
 	display: block;
+	
+	/* required for Edge */
+	z-index: 100;
 }
 
 .pageHeaderSearchInputContainer {
